# Okysa

./: .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Bot.py  Okysa.py  Prayer.py  README.md  TODO.md  matrix_debug_bot.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: Validate.yml  publish.yml
Commands/: Base.py  Char.py  CommandErrorCog.py  Games.py  Minecraft.py  MinecraftCog.py  Oracle.py  OracleCog.py  Remind.py  RemindCog.py  Roll.py  Sound.py  StateCog.py  Voice.py  Vote.py  WeaponCog.py  Wiki.py  WikiCog.py  __init__.py
Frontends/: DiscordFrontend.py  MatrixFrontend.py
Golconda/: Button.py  CharacterService.py  Clocks.py  DiscordVoiceWebsocket.py  EasterEggs.py  Interface.py  Ollama.py  Reminder.py  Rights.py  RollInterface.py  Routing.py  Scheduling.py  Slash.py  Slashing.py  Sound.py  Storage.py  TextModal.py  Tools.py  VoiceComponent.py  eastereggs.py
Pantheon/: Ateph.py  Ilargia.py  ShiningOne.py  Sural.py  misc.py
scripts/: deploy.sh  install.py  webhook_listener.py
tests/: conftest.py  test_base.py  test_char.py  test_character_service.py  test_clocks.py  test_discord_frontend.py  test_easter_eggs.py  test_independency.py  test_minecraft.py  test_okysa.py  test_ollama.py  test_oracle.py  test_reminder.py  test_rights.py  test_roll.py  test_roll_extra.py  test_roll_interface.py  test_roll_interface_extra.py  test_routing.py  test_scheduling.py  test_storage.py  test_storage_extra.py  test_tools.py  test_voice.py  test_wiki.py
