[project]
name = "okysa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp==3.10.11",
    "bleach>=6.3.0",
    "dateparser==1.2.0",
    "discord-py>=2.4.0",
    "gamepack",
    "gitpython>=3.1.45",
    "pynacl==1.5.0",
    "python-dateutil==2.8.2",
    "setuptools==70.0.0",
    "typing==3.7.4.3",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pre-commit>=4.0.0",
]

[tool.uv.sources]
gamepack = { path = "../GamePack", editable = true }

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:datetime.datetime.utcfromtimestamp:DeprecationWarning",
    "ignore:'asyncio.iscoroutinefunction' is deprecated:DeprecationWarning",
]
asyncio_mode = "auto"
